15-benchmark_1.stderr
  File "15-benchmark_1.py", line 23
    %matplotlib inline
    ^
SyntaxError: invalid syntax
